Linked addresses, created field linkings

--- a/app/views/fields/_form.html.erb
+++ b/app/views/fields/_form.html.erb
@@ -20,8 +20,8 @@
     <%= f.number_field :index %>
   </div>
   <div class="field">
-    <%= f.label :type %><br>
-    <%= f.number_field :type %>
+    <%= f.label :group %><br>
+    <%= f.number_field :group %>
   </div>
   <div class="actions">
     <%= f.submit %>
