--- a/app/views/fields/show.html.erb
+++ b/app/views/fields/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>Type:</strong>
-  <%= @field.type %>
+  <strong>Group:</strong>
+  <%= @field.group %>
 </p>
 
 <%= link_to 'Edit', edit_field_path(@field) %> |
