--- a/app/views/fields/index.html.erb
+++ b/app/views/fields/index.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th>Name</th>
       <th>Index</th>
-      <th>Type</th>
+      <th>Group</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,7 +15,7 @@
       <tr>
         <td><%= field.name %></td>
         <td><%= field.index %></td>
-        <td><%= field.type %></td>
+        <td><%= field.group %></td>
         <td><%= link_to 'Show', field %></td>
         <td><%= link_to 'Edit', edit_field_path(field) %></td>
         <td><%= link_to 'Destroy', field, method: :delete, data: { confirm: 'Are you sure?' } %></td>
