Added combo box options and specific field lookup on student

--- a/app/views/fields/_form.html.erb
+++ b/app/views/fields/_form.html.erb
@@ -23,6 +23,14 @@
     <%= f.label :group %><br>
     <%= f.number_field :group %>
   </div>
+  <div class="field">
+    <%= f.label :description %><br>
+    <%= f.text_field :description %>
+  </div>
+  <div class="field">
+    <%= f.label :options %><br>
+    <%= f.text_field :options %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
