Added groups for fields, started working on complete student information page

--- a/app/views/fields/_form.html.erb
+++ b/app/views/fields/_form.html.erb
@@ -20,8 +20,8 @@
     <%= f.number_field :index %>
   </div>
   <div class="field">
-    <%= f.label :group %><br>
-    <%= f.number_field :group %>
+    <%= f.label :group_id %><br>
+    <%= f.number_field :group_id %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
