--- a/app/views/fields/index.html.erb
+++ b/app/views/fields/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= field.name %></td>
         <td><%= field.index %></td>
-        <td><%= field.group %></td>
+        <td><%= field.group_id %></td>
         <td><%= field.description %></td>
         <td><%= field.options %></td>
         <td><%= link_to 'Show', field %></td>
