--- a/app/views/student_information/new.html.haml
+++ b/app/views/student_information/new.html.haml
@@ -14,6 +14,9 @@
   - Field.order(:index).each do |field|
     %br
     =field.name
+    (
+    =field.description
+    )
 
   %div.actions
     = submit_tag
