--- a/app/views/student_instruments/_form.html.erb
+++ b/app/views/student_instruments/_form.html.erb
@@ -13,15 +13,17 @@
 
   <div class="field">
     <%= f.label :student_id %><br>
-    <%= f.number_field :student_id %>
+    <%= f.collection_select(:student_id, Student.all, :id, :full_name)  %>
   </div>
+
   <div class="field">
     <%= f.label :instrument_id %><br>
-    <%= f.number_field :instrument_id %>
+    <%= f.collection_select(:instrument_id, Instrument.all, :id, :name)  %>
   </div>
+
   <div class="field">
     <%= f.label :ensemble_id %><br>
-    <%= f.number_field :ensemble_id %>
+    <%= f.collection_select(:ensemble_id, Ensemble.all, :id, :name) %>
   </div>
   <div class="actions">
     <%= f.submit %>
