--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -30,15 +30,11 @@
 
 
   <%= f.fields_for :student_instruments do |builder| %>
-    <div class="field">
-      <%= builder.label :instrument_id %>
-      <%= builder.collection_select(:instrument_id, Instrument.all, :id, :name)  %>
-
-      <%= builder.label :ensemble_id %>
-      <%= builder.collection_select(:ensemble_id, Ensemble.all, :id, :name) %>
-    </div>
+    <%= render 'student_instrument_fields', :f => builder %>
   <% end %>
-
+  <div class="links">
+    <%= link_to_add_association 'add instrument', f, :student_instruments %>
+  </div>
 
   <div class="actions">
     <%= f.submit %>
