--- a/app/views/fields/show.html.erb
+++ b/app/views/fields/show.html.erb
@@ -25,5 +25,10 @@
   <%= @field.options %>
 </p>
 
+<p>
+  <strong>Hidden:</strong>
+  <%= @field.hidden %>
+</p>
+
 <%= link_to 'Edit', edit_field_path(@field) %> |
 <%= link_to 'Back', fields_path %>
