--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -39,16 +39,26 @@
   <% Field.order(:index).each do |field| %>
     <% case field.group %>
     <% when Group.where(name: "Address").first %>
-      ADDRESS</br>
-    <% when Group.where(name: "Text").first %>
-      <%= f.fields_for :texts do |builder| %>
-        <% if builder.object.field_id == field.id %>
+      <%= f.fields_for :addresses do |builder| %>
+        <% if builder.object.field_id == field.id && !field.hidden %>
           <%=field.name%></br>
           <div class="field">
-            <%= builder.hidden_field :field_id, :value => field.id %>
-            <%= builder.text_field :content %>
+            <%= builder.label :address_1 %><br>
+            <%= builder.text_field :address_1 %> </br>
+            <%= builder.label :address_2 %><br>
+            <%= builder.text_field :address_2 %> </br>
+            <%= builder.label :city %><br>
+            <%= builder.text_field :city %> </br>
+            <%= builder.label :state_id %><br>
+            <%= builder.collection_select(:state_id, State.all, :id, :name) %> </br>
+            <%= builder.label :zip %><br>
+            <%= builder.number_field :zip %> </br>
           </div>
         <% end %>
+      <% end %>
+    <% when Group.where(name: "Text").first %>
+      <%= f.fields_for :texts do |builder| %>
+        <%= render 'text_fields', :field => field, :f => builder %>
       <% end %>
     <% when Group.where(name: "Options").first %>
       OPTIONS</br>
