--- a/app/views/fields/_form.html.erb
+++ b/app/views/fields/_form.html.erb
@@ -29,7 +29,7 @@
   </div>
   <div class="field">
     <%= f.label :options %><br>
-    <%= f.text_field :options %>
+    <%= f.text_area :options %>
   </div>
   <div class="field">
     <%= f.label :hidden %><br>
