Cleanup and refactoring of all student views

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,5 +8,5 @@
     = csrf_meta_tags
   %body
     = render 'layouts/navbar'
-  %div.container#main-container
+  %div.container.bottom-spacer#main-container
     = yield
