--- a/app/views/students/index.html.haml
+++ b/app/views/students/index.html.haml
@@ -1,36 +1,42 @@
 %h1
-  Listing students
+  Claimed Students
 
-%table
-  %thead
-    %tr
-      %th
-        First name
-      %th
-        Last name
-      %th
-        Email
-      %th
-        Recruit
-  %tbody
-    - @students.each do |student|
+%div.responsive-table
+  %table.table
+    %thead
       %tr
-        %td
-          = student.first_name
-        %td
-          = student.last_name
-        %td
-          = student.email
-        %td
-          = student.recruit
-        %td
-          = link_to 'Show', student
-        %td
-          = link_to 'Edit', edit_student_path(student)
-        %td
-          = link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' }
-        %td
-          = link_to 'Comment', new_comment_path(student_id: student.id)
+        %th
+          :plain
+            #
+        %th
+          Name
+        %th
+          Major
+        %th
+          Email
+        %th
+          Recruit
+    %tbody
+      - @claimed_students.each_with_index do |student, i|
+        %tr
+          %th.row
+            = i + 1
+          %td
+            = student.full_name_inversed
+          %td
+            = student.field(Field.where(name: "Major").first.id).content
+          %td
+            = student.email
+          %td
+            = student.recruit
+          %td
+            = link_to 'Show', student
+          %td
+            = link_to 'Edit', edit_student_path(student)
+          %td
+            = link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' }
+          %td
+            = link_to 'Comment', new_comment_path(student_id: student.id)
 %br
 
 = link_to 'New Student', new_student_path, class: "btn btn-success"
