--- a/app/views/fields/_form.html.erb
+++ b/app/views/fields/_form.html.erb
@@ -10,7 +10,7 @@
       </ul>
     </div>
   <% end %>
-
+  <%= f.hidden_field :locked, value: @field.locked %>
   <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
