--- a/app/views/fields/index.html.erb
+++ b/app/views/fields/index.html.erb
@@ -1,3 +1,9 @@
+<% flash.each do |key, value| %>
+  <div class="<%= flash_class(key) %>">
+    <%= value %>
+  </div>
+<% end %>
+
 <h1>Listing fields</h1>
 
 <table>
