--- a/app/views/students/index.html.haml
+++ b/app/views/students/index.html.haml
@@ -1,88 +1,32 @@
-%h1
-  Claimed Students
+%div.row
+  %div.col-sm-6
+    %h1
+      Claimed Students
+  %div.col-sm-6
+    = link_to 'New Student', new_student_path, class: "btn btn-success pull-right"
 
-%div.table-responsive
-  %table.table
-    %thead
-      %tr
-        %th
-          :plain
-            #
-        %th
-          Name
-        %th
-          Major
-        %th
-          Email
-        %th
-          Hometown
-        %th.text-center
-          Details
-        %th.text-center
-          Archive
-        %th.text-center
-          Comment
-        %th.text-center
-          Unclaim
-    %tbody
-      - @claimed_students.each_with_index do |student, i|
-        %tr
-          %th.row
-            = i + 1
-          %td
-            = student.full_name_inversed
-          %td
-            = student.major
-          %td
-            = student.email
-          %td
-            = student.hometown
-          %td.text-center
-            = link_to (fa_icon "desktop"), student, class: "btn btn-success"
-          %td.text-center
-            = link_to (fa_icon "archive"), student_archive_path(student), method: :delete, data: { confirm: 'Are you sure you wish to archive this student?' }, class: "btn btn-danger"
-          %td.text-center
-            = link_to (fa_icon "comments-o"), new_comment_path(student_id: student.id), class: "btn btn-primary"
-          %td.text-center
-            = link_to (fa_icon "remove"), student_unclaim_path(student), method: :put, class: "btn btn-warning"
+- if @claimed_students.size != 0
+  = render 'claimed_students'
+- else
+  %div.row
+    %div.col-sm-12
+      %div.alert.alert-danger
+        Error: No Students Claimed
 
-%h1
-  Unclaimed Students
-%div.table-responsive
-  %table.table
-    %thead
-      %tr
-        %th
-          :plain
-            #
-        %th
-          Name
-        %th
-          Hometown
-        %th
-          Instuments
-        %th
-          Ensembles
-        %th.text-center
-          Details
-        %th.text-center
-          Claim
-    %tbody
-      - @unclaimed_students.each_with_index do |student, i|
-        %tr
-          %th.row
-            = i + 1
-          %td
-            = student.full_name_inversed
-          %td
-            = student.hometown
-          %td
-            = student.instrument_list
-          %td
-            = student.ensemble_list
-          %td.text-center
-            = link_to (fa_icon "desktop"), student, class: "btn btn-success"
-          %td.text-center
-            = link_to (fa_icon "plus"), student_claim_path(student), method: :put, class: "btn btn-warning"
+%div.row
+  %h1
+    %div.col-sm-6
+      Unclaimed Students
+      = "(#{@unclaimed_students.size})" if @unclaimed_students.size != 0
+    %div.col-sm-6
+      %div.btn-group.pull-right
+        = link_to "Change Filter", user_favorite_instruments_path, class: "btn btn-default"
+        = link_to "View All", unclaimed_students_path, class: "btn btn-default"
 
-= link_to 'New Student', new_student_path, class: "btn btn-success"
+- if @unclaimed_students.size != 0
+  = render 'unclaimed_students'
+- else
+  %div.row
+    %div.col-sm-12
+      %h3
+        = link_to "Error: No Students Found, change filter to find more.", user_favorite_instruments_path, class: "btn btn-danger"
