--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,4 +9,9 @@
   %body
     = render 'layouts/navbar'
   %div.container.bottom-spacer#main-container
+    - flash.each do |key, value|
+      %div{ :class => flash_class(key) + " alert-dismissible", role: "alert"}
+        %button{ type: "button", class: "close", "data-dismiss" => "alert", "aria-label" => "Close" }
+          = fa_icon "close"
+        = value
     = yield
