--- a/app/assets/stylesheets/seasons.css.scss
+++ b/app/assets/stylesheets/seasons.css.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the seasons controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@import "bootstrap";
+
+.form-control-date {
+  @extend .form-control;
+}
+
+.form-test {
+  margin:100px;
+}
