--- a/app/views/students/_claimed_students.html.haml
+++ b/app/views/students/_claimed_students.html.haml
@@ -1,6 +1,6 @@
 %div.row
   %div.table-responsive
-    %table.table
+    %table.table.table-hover.table-condensed
       %thead
         %tr
           %th
@@ -9,7 +9,7 @@
           %th
             Name
           %th
-            Major
+            Status
           %th
             Email
           %th
@@ -17,9 +17,11 @@
           %th.text-center
             Details
           %th.text-center
+            Confirm
+          %th.text-center
             Archive
           %th.text-center
-            Comment
+            Contact
           %th.text-center
             Unclaim
       %tbody
@@ -30,13 +32,15 @@
             %td
               = student.full_name_inversed
             %td
-              = student.major
+              = student.status
             %td
               = student.email
             %td
               = student.hometown
             %td.text-center
               = link_to (fa_icon "desktop"), edit_student_path(student), class: "btn btn-success"
+            %td.text-center
+              = link_to (fa_icon "check"), sections_student_path(student), class: "btn btn-info"
             %td.text-center
               = link_to (fa_icon "archive"), student_archive_path(student), method: :delete, data: { confirm: 'Are you sure you wish to archive this student?' }, class: "btn btn-danger"
             %td.text-center
