--- a/app/views/students/_unclaimed_students.html.haml
+++ b/app/views/students/_unclaimed_students.html.haml
@@ -1,6 +1,6 @@
 %div.row
   %div.table-responsive
-    %table.table
+    %table.table.table-hover.table-condensed
       %thead
         %tr
           %th
