--- a/app/views/students/index.html.haml
+++ b/app/views/students/index.html.haml
@@ -5,7 +5,7 @@
   %div.col-sm-6
     %div.btn-group.pull-right
       = link_to 'New Student', new_student_path, class: "btn btn-success"
-      = link_to 'Import Students', "#", class: "btn btn-success", id: "student_upload"
+      = button_tag 'Import Students', class: "btn btn-success", id: "student_upload"
 
 - if @claimed_students.size != 0
   = render 'claimed_students'
