--- a/app/views/students/_claimed_students.html.haml
+++ b/app/views/students/_claimed_students.html.haml
@@ -26,7 +26,7 @@
             Unclaim
       %tbody
         - @claimed_students.each_with_index do |student, i|
-          %tr
+          %tr{ class: "#{student.column_color}"}
             %th.row
               = i + 1
             %td
