--- a/app/views/students/index.html.haml
+++ b/app/views/students/index.html.haml
@@ -3,7 +3,7 @@
     %div.col-sm-6
       Claimed Students
   %div.col-sm-6
-    %div.btn-group.pull-right
+    %div.btn-group.pull-right-cond
       = link_to 'New Student', new_student_path, class: "btn btn-success"
       = button_tag 'Import Students', class: "btn btn-success", id: "student_upload"
 
