--- a/app/views/sections/_rank_fields.html.haml
+++ b/app/views/sections/_rank_fields.html.haml
@@ -1,14 +1,13 @@
-%div.col-sm-12.field.bottom-spacer
-  %div.row
-    %div.col-sm-6
-      %div.input-group
-        %span.input-group-addon
-          Name
-        = f.text_field :name, class: "form-control"
-    %div.col-sm-6
-      %div.input-group
-        %span.input-group-addon
-          Number
-        = f.text_field :index, class: "form-control"
-        %span.input-group-btn
-          = link_to_remove_association (fa_icon "close"), f, {wrapper_class: 'field', class: "btn btn-danger"}
+%div.row.ield.bottom-spacer
+  %div.col-sm-6
+    %div.input-group
+      %span.input-group-addon
+        Name
+      = f.text_field :name, class: "form-control"
+  %div.col-sm-6
+    %div.input-group
+      %span.input-group-addon
+        Number
+      = f.text_field :index, class: "form-control"
+      %span.input-group-btn
+        = link_to_remove_association (fa_icon "close"), f, {wrapper_class: 'field', class: "btn btn-danger"}
