--- a/app/views/students/_unclaimed_students.html.haml
+++ b/app/views/students/_unclaimed_students.html.haml
@@ -24,7 +24,7 @@
             %th.row
               = i + 1
             %td
-              = student.full_name_inversed
+              = student.full_name_reversed
             %td
               = student.hometown
             %td
