--- a/app/views/students/_claimed_students.html.haml
+++ b/app/views/students/_claimed_students.html.haml
@@ -30,7 +30,7 @@
             %th.row
               = i + 1
             %td
-              = student.full_name_inversed
+              = student.full_name_reversed
             %td
               = student.status
             %td
