Started building out GDS scores.  Show page works, routes are really weird

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,10 @@ body {
   padding-bottom: 15px
 }
 
+.bottom-margin {
+  margin-bottom: 15px;
+}
+
 .vertical-align {
   display: flex;
   align-items: center;
